--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panda的个人网站</title>
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_1628185_9w62wjm5a97.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_1628185_9w62wjm5a97.css">
 </head>
 <body>
   <div id="root"></div>
