--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-Hans">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   <title>Panda的个人网站</title>
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_1628185_9w62wjm5a97.css">
 </head>
