--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,6 +6,7 @@
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="expires" content="0">
   <meta http-equiv="pragma" content="no-cache">
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="dns-prefetch" href="//genius-liupan.github.io"/>
   <link rel="dns-prefetch" href="//file.5rs.me"/>
   <script type="text/javascript">
